--- a/style.css
+++ b/style.css
@@ -951,6 +951,92 @@ body #book-index #indice .col-main {
   font-size: 35px;
   font-weight: bold;
 }
+/* Estandarizacion de iconos*/
+
+/* ICONOS CONTENIDO UNIDAD*/
+#layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img {
+  background-color: black;
+  background-size: contain;
+  }
+
+  /* Icono para imágenes*/
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .unit-content .content-item .content-img.type-8.img {
+    background-image: url(/themes/responsive/images/contenido/recurso-icon-img.png);
+  }
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img.type-8.img,
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .content-img.type-8.img {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-img.png) !important;
+  }
+
+/* Icono para actividades*/
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .unit-content .content-item .content-img.type-6.actividad {
+    background-image: url(/themes/responsive/images/contenido/recurso-icon-actividad.png);
+  }
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img.type-6.actividad,
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .content-img.type-6.actividad {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-actividad.png) !important;
+  }
+
+/*Icono para vídeo*/
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .unit-content .content-item .content-img.type-2.video {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-video.png);
+  }
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img.type-2.video,
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .content-img.type-2.video {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-video.png) !important;
+  }
+
+/*Icono para música*/
+#layout-container div[id*="section-screen"] .section .section-content .tabs-content .unit-content .content-item .content-img.type-3.musica {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-musica.png);
+}
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img.type-3.musica,
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .content-img.type-3.musica {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-musica.png) !important;
+  }
+
+/*Icono para archivo*/
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .unit-content .content-item .content-img.type-5.archivo {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-archivo.png);
+  }
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img.type-5.archivo,
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .content-img.type-5.archivo {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-archivo.png) !important;
+  }
+
+/*Icono para libro*/
+#layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .unit-content .content-item .content-img.type-6.libro {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-libro.png);
+}
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img.type-6.libro,
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .content-img.type-6.libro {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-libro.png) !important;
+}
+
+/*Icono para url*/
+#layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .unit-content .content-item .content-img.type-7.url {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-url.png);
+}
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img.type-7.url,
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .content-img.type-7.url {
+  background-image: url(/themes/responsive/images/contenido/recurso-icon-url.png) !important;
+  }
+
+
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .circle-outer,
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content.teacher-content .resources-content .content-item .circle-outer {
+    background: white;
+  }
+
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .circle-inner,
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content.teacher-content .resources-content .content-item .circle-inner{
+    background-color: white;
+  }
+
+  /**/ 
+
+/*--*/
+
 
 /*---- TOC LATERAL - MENÚ DESPLEGABLE LATERAL ----*/
 body:not(.isTablet) #book-index #indice .units ul#list-units li:not(.disabled).active a,
