--- a/style.css
+++ b/style.css
@@ -1113,6 +1113,20 @@ body #actividad {
     margin-bottom: 10rem; /*Para que se vea dónde acaba la pagina*/
 }
 
+/*Ajustes para slides con imagen de fondo*/
+#actividad .carousel-inner .item-container.aux-bckg .class_slide,
+ #actividad .carousel-inner .item-container.aux-fullscreen.is-left .class_slide {
+  --SlidePadding: 3rem;
+}
+#actividad .carousel-inner .item-container.aux-fullscreen .class_slide,
+ #actividad .carousel-inner .item-container.aux-bckg .class_slide {
+  position: relative;
+  background-color: #fff;
+  padding-right: 20px;
+  padding-bottom: 0;
+  margin-right: 0;
+}
+
 /*---- Navbar -----*/
 .slider-indicators li {
     width: 12px;
