--- a/style.css
+++ b/style.css
@@ -1114,18 +1114,24 @@ body #actividad {
     margin-bottom: 10rem; /*Para que se vea dónde acaba la pagina*/
 }
 
+
 /*Ajustes para slides con imagen de fondo*/
 #actividad .carousel-inner .item-container.aux-bckg .class_slide,
  #actividad .carousel-inner .item-container.aux-fullscreen.is-left .class_slide {
-  --SlidePadding: 2rem;
+  --SlidePadding: 3rem;
 }
 #actividad .carousel-inner .item-container.aux-fullscreen .class_slide,
  #actividad .carousel-inner .item-container.aux-bckg .class_slide {
-  position: relative;
-  background-color: #fff;
-  padding-right: 20px;
-  padding-bottom: 0;
-  margin-right: 0;
+  padding-right: var(--SlidePadding);
+  padding-left: var(--SlidePadding);
+}
+#actividad .carousel-inner .item-container.aux-fullscreen,
+ #actividad .carousel-inner .item-container.aux-bckg {
+  padding-left: 0;
+}
+#actividad .carousel-inner .item-container.aux-fullscreen .class_slide,
+ #actividad .carousel-inner .item-container.aux-bckg .class_slide {
+  padding-left: var(--SlidePadding) !important;
 }
 
 /*---- Navbar -----*/
