--- a/style.css
+++ b/style.css
@@ -1117,7 +1117,8 @@ body #actividad {
 
 /*Ajustes para slides con imagen de fondo*/
 #actividad .carousel-inner .item-container.aux-bckg .class_slide,
- #actividad .carousel-inner .item-container.aux-fullscreen.is-left .class_slide {
+ #actividad .carousel-inner .item-container.aux-fullscreen.is-left .class_slide,
+  #actividad .carousel-inner .item-container.aux-fullscreen.is-right .class_slide {
   --SlidePadding: 3rem;
 }
 #actividad .carousel-inner .item-container.aux-fullscreen .class_slide,
