--- a/style.css
+++ b/style.css
@@ -1116,6 +1116,11 @@ body #actividad {
 
 
 /*Ajustes para slides con imagen de fondo*/
+#actividad .carousel-inner .item-container.aux-fullscreen.is-bottom .class_slide,
+ #actividad .carousel-inner .item-container.aux-fullscreen.is-top .class_slide,
+  #actividad .carousel-inner .item-container.aux-fullscreen.is-right .class_slide {
+  margin-left: 0;
+}
 #actividad .carousel-inner .item-container.aux-bckg .class_slide,
  #actividad .carousel-inner .item-container.aux-fullscreen.is-left .class_slide,
   #actividad .carousel-inner .item-container.aux-fullscreen.is-right .class_slide {
